--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-.navbar {
-    background-color: #3e4149; /* Set background color for navbar */
-}
-
 @media (max-width: 768px) {
     .navbar-collapse {
         height: 100vh;
@@ -15,10 +11,6 @@
 
     .navbar-toggler {
         outline: none;
-    }
-
-    .navbar-brand {
-        font-size: 1.8em;
     }
 
     .navbar-toggler:focus {
@@ -54,12 +46,34 @@
         padding-left: 200px;
     }
 
-
+    .navbar-nav {
+        margin-left: 100px
+    }
     .navbar-collapse .nav-link {
-        color: blue;
+        color: black;
         font-size: 1.2em;
         letter-spacing: normal;
         border-bottom: none;
+    }
+
+    .nav-item {
+        position: relative;
+        padding: 0 25px;
+    }
+
+    .nav-item:hover {
+        background-color: lightgray;
+    }
+
+    .nav-item .dropdown-menu {
+        min-width: 10rem;
+        width: auto;
+        left: 0;
+        right: auto;
+    }
+    .nav-item.dropdown:hover .dropdown-menu {
+        display: block;
+        margin-top: 0;
     }
 }
 
@@ -67,78 +81,3 @@ body {
     padding: 0; /* Reset body padding */
 }
 
-.container-fluid {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.carousel-container {
-    padding: 0;
-}
-
-.carousel-item {
-    height: 400px; /* Set height for carousel items */
-}
-
-.carousel-caption {
-    position: absolute;
-    top: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-}
-
-.text-center {
-    text-align: center; /* Center text for specific sections */
-}
-
-.row {
-    padding: 20px; /* Add padding to rows */
-    display: flex; /* Enable flexbox */
-    align-items: center; /* Vertically center items */
-    justify-content: center; /* Horizontally center items */
-}
-
-.py-5 {
-    padding-top: 3rem !important; /* Increase top padding */
-    padding-bottom: 3rem !important; /* Increase bottom padding */
-}
-
-.row-pic {
-    margin-top: 20px; /* Adjust margin for images */
-}
-
-h1, h2, p {
-    margin: 0 auto; /* Center headers and paragraphs */
-}
-
-.btn {
-    margin-top: 15px; /* Add margin above buttons */
-}
-
-/* Ensure that the image is centered */
-.col-md-5, .col-md-7 {
-    display: flex; /* Enable flexbox for columns */
-    flex-direction: column; /* Arrange children vertically */
-    align-items: center; /* Center items horizontally */
-    justify-content: center; /* Center items vertically */
-    text-align: center; /* Center text within the column */
-}
-
-img, .row-pic {
-    margin: 0 auto; /* Center images */
-    max-width: 100%; /* Make sure images are responsive */
-    height: auto; /* Maintain aspect ratio */
-}
-
-.top-logo {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1000;
-}
-
-.top-logo img {
-    width: 100px;
-    height: auto;
-}
