--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,13 @@ body {
         max-height: 100vh;
         padding-top: 191px;
         background-color: #124532;
-        <!-- background-image: url("gears.png"); -->
+        background-image:
+                linear-gradient(180deg, rgba(18, 69, 50, 0.2), rgba(0, 0, 0, 0.68)),
+                linear-gradient(180deg, rgba(18, 69, 50, 0.7), rgba(12, 50, 36, 0.7)),
+                url('white-gears.jpg');
+        background-position: 0px 0px, 0px 0px, 50% 50%;
+        background-size: auto, auto, cover;
+        background-attachment: scroll, scroll, scroll;
         background-position: center;
         color: white;
     }
@@ -250,7 +256,10 @@ body {
     }
 
     .stats {
-        background-color: #124532;
+        background-image:
+                linear-gradient(180deg, rgba(18, 69, 50, 0.2), rgba(0, 0, 0, 0.68)),
+                linear-gradient(180deg, rgba(18, 69, 50, 0.7), rgba(12, 50, 36, 0.7)),
+                url('white-gears.jpg');
     }
 
     .stats-text {
@@ -262,7 +271,7 @@ body {
     .stats-header {
         font-size: 65px;
         font-weight: 900 !important;
-        color: #2E703B;
+        color: #CFB687;
         /* TODO: possible color choice
         color: #CFB687;
          */
@@ -300,8 +309,34 @@ body {
     }
 
     .footer {
-        background-color: #D3D3D3; /* Light shadow above footer */
         text-align: center;
+        border-top: 1px solid black;
+        background-image: linear-gradient(180deg, #fff 10%, transparent), url('white-gears.jpg');
+        background-position: 0 0, 0 0;
+        background-size: contain, 960px;
+    }
+
+    .footer h4 {
+        font-weight: 900;
+        color: #124532;
+    }
+
+    .footer a {
+        font-weight: 700;
+        color: black;
+    }
+
+    .footer a:hover {
+        color: #CFB687;
+    }
+
+    .footer h5 {
+        font-weight: 700;
+        color: black;
+    }
+
+    .footer h6 {
+        font-weight: 600;
     }
 
     .ml-main {
