refactored file structure temporarily for github pages

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,69 +1,69 @@
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Black.woff2') format('woff2');
+    src: url('../fonts/Switzer-Black.woff2') format('woff2');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Bold.woff2') format('woff2');
+    src: url('../fonts/Switzer-Bold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Extrabold.woff2') format('woff2');
+    src: url('../fonts/Switzer-Extrabold.woff2') format('woff2');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Extralight.woff2') format('woff2');
+    src: url('../fonts/Switzer-Extralight.woff2') format('woff2');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Light.woff2') format('woff2');
+    src: url('../fonts/Switzer-Light.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Medium.woff2') format('woff2');
+    src: url('../fonts/Switzer-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Regular.woff2') format('woff2');
+    src: url('../fonts/Switzer-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Semibold.woff2') format('woff2');
+    src: url('../fonts/Switzer-Semibold.woff2') format('woff2');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Thin.woff2') format('woff2');
+    src: url('../fonts/Switzer-Thin.woff2') format('woff2');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('fonts/Switzer-Variable.woff2') format('woff2');
+    src: url('../fonts/Switzer-Variable.woff2') format('woff2');
     font-weight: 100 900;
     font-style: normal;
 }
